# embedded-rust-template

./: Cargo.toml  README.md  memory.x
.cargo/: config.toml
src/: main.rs  scratch.rs  test.rs
