[package]
name = "embedded-rust-template"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = "0.7.7"
cortex-m-rt = "0.7.3"
panic-halt = "0.2.0"

[dependencies.stm32f1xx-hal]
version = "0.10.0"
features = ["rt", "stm32f103", "medium"]

[profile.dev]
opt-level = 0  # 优化大小
lto = true       # 启用链接时优化
codegen-units = 1 # 减少并行代码生成单元数量
panic = 'abort'   # 在panic时直接中止而不是展开

[profile.release]
opt-level = 3  # 优化大小
lto = true       # 启用链接时优化
codegen-units = 1 # 减少并行代码生成单元数量
panic = 'abort'   # 在panic时直接中止而不是展开
